# ChangeLog for app-misc/when
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/when/ChangeLog,v 1.38 2010/10/04 06:54:09 jlec Exp $

*when-1.1.21 (04 Oct 2010)

  04 Oct 2010; Justin Lecher <jlec@gentoo.org> +when-1.1.21.ebuild:
  Version Bump, 339636

*when-1.1.20 (23 Jul 2010)

  23 Jul 2010; Jeremy Olexa <darkside@gentoo.org> -when-1.1.16-r1.ebuild,
  +when-1.1.20.ebuild:
  Version bump, thanks to Tim Harder in bug 329347

*when-1.1.16-r1 (15 Jun 2010)

  15 Jun 2010; Justin Lecher <jlec@gentoo.org> +when-1.1.16-r1.ebuild,
  +files/when-prefix.patch:
  QA, imported prefix changes

  01 Aug 2009; Jeremy Olexa <darkside@gentoo.org> -when-1.1.11.ebuild,
  -when-1.1.13.ebuild:
  remove old

  30 May 2009; nixnut <nixnut@gentoo.org> when-1.1.16.ebuild:
  ppc stable #271108

  27 May 2009; Ferris McCormick <fmccor@gentoo.org> when-1.1.16.ebuild:
  Sparc stable, Bug #271108.

  27 May 2009; Christian Faulhammer <fauli@gentoo.org> when-1.1.16.ebuild:
  stable x86, bug 271108

  25 May 2009; Thomas Anderson <gentoofan23@gentoo.org> when-1.1.16.ebuild:
  stable amd64, bug 271108

  01 Feb 2009; Markus Meier <maekke@gentoo.org> when-1.1.13.ebuild:
  x86 stable, bug #256450

  01 Feb 2009; nixnut <nixnut@gentoo.org> when-1.1.13.ebuild:
  ppc stable #256450

  26 Jan 2009; Tiago Cunha <tcunha@gentoo.org> when-1.1.13.ebuild:
  stable amd64/sparc, bug 256450

*when-1.1.16 (26 Jan 2009)

  26 Jan 2009; Peter Volkov <pva@gentoo.org> +when-1.1.16.ebuild:
  Version bump, bug #252436, thank Arfrever Frehtes Taifersar Arahesis for
  report.

*when-1.1.13 (07 Jul 2008)

  07 Jul 2008; Raúl Porcel <armin76@gentoo.org> +when-1.1.13.ebuild:
  Version bump

  10 May 2008; nixnut <nixnut@gentoo.org> when-1.1.11.ebuild:
  Stable on ppc wrt bug 220929

  08 May 2008; Raúl Porcel <armin76@gentoo.org> when-1.1.11.ebuild:
  sparc/x86 stable

  27 Mar 2008; nixnut <nixnut@gentoo.org> when-1.1.7.ebuild: