@@ -5,15 +5,21 @@ AUX when-prefix.patch 294 RMD160 4cefc0cc1b6bb35051c8af26ca4f40010994b5c5 SHA1 9
 DIST when-1.1.16.tar.gz 43929 RMD160 a1fdc91c0e2b5a564978c5038ce7d46fa02ff8a9 SHA1 eb32d5630d3aa794efc52932ebcb50342e324160 SHA256 814af15cd86fe83c26a5be4a703b896ab2d9b8af92655f9e0ba6229892fb1265
 DIST when-1.1.20.tar.gz 45655 RMD160 71535b728f830887dd3d115a4cecde20af996859 SHA1 5aa4cd8902b3b488fbbe8aa4e31b7371c566f06c SHA256 9bb61692ba6c074ed549f6c794509b912210911b6b0d3d9cd7e2ec872ef8efe4
 DIST when-1.1.21.tar.gz 46498 RMD160 ed5742ae0d0db3095392a0b1ea5b87cfe881953e SHA1 cc442e6eb10564597fe1dddec834b3c670d42f5a SHA256 8861e3b0a9d30b2f0d5f11877c8b2bc97d304aa7b05a5d31e052972af6f9116e
+DIST when-1.1.22.tar.gz 47096 RMD160 108174a001fa4e03cd10c67069d800d261a09554 SHA1 2475ed38ed2f51b44762e9d6e3b16bf007a18552 SHA256 ceba61724a1685529319fe379e0c14a9226f3bf4f60b499169fe11bf3eaec71d
 EBUILD when-1.1.16.ebuild 949 RMD160 a69b878979178d1249d17229e29f0cd35b277a99 SHA1 1f432978b1c236448b7f911d5308552bdb04bf54 SHA256 cf77d842f05979c6f5e7776db21daf30b21c91383f5bdd41077df84ac87bb601
 EBUILD when-1.1.20.ebuild 1153 RMD160 204e66d8452b76b2d61ef6e556859849ea85097e SHA1 9e6c4ddaf9d0d2f0f705ee2b5664003733fcdd8e SHA256 7b9198cee69a43dbd145061707e20f796a81378233ea4558d1bf6f8767befbb3
 EBUILD when-1.1.21.ebuild 1099 RMD160 0f896b48329918fff88346c875118590e064a58a SHA1 d306e798b656df39497d264b0dbd201c6fe07aef SHA256 ce57a5e6720944b81263011202062be6fc49bf6eb8baa0352fff498807db413f
-MISC ChangeLog 4665 RMD160 2b1935a2ee4499c1dbcdab4e3c138deac10af324 SHA1 11b8bf8963ab8f6359d70ea3f0b73911a5497e56 SHA256 5ff5ec96ff9fa810d76494817fa7c30928d73515871bacb69b5e63a7d80f89a5
+EBUILD when-1.1.22.ebuild 1081 RMD160 2ff13e3770cefefc8d7d4d3c2f819f211e890ab6 SHA1 6aef267619da5d0033cec0886c06b52bd1874e9e SHA256 d01c9197a1be2a32f81ab07ae76de96afe5b1a6d1d282f5eb690cd6d2e6b6c9f
+MISC ChangeLog 4816 RMD160 7e2882968223dd7339e21896a144f4231f85fe16 SHA1 338c4640b44d28e50c8908bbf238dc345ec7cf7f SHA256 9bb765b8b3b1ff974ad6acb0ac5f2a5d72b61eb737c05454dc6741151cca556f
 MISC metadata.xml 165 RMD160 c4557a3518a065b077539be5a0f20e4735fc2141 SHA1 1831705b1eb97b63968fc9eef31aa904a69a854a SHA256 75ca85c472d4181ae0de529c83826baaebe75d9e750ee6621758b5096bceffcd
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkypehUACgkQgAnW8HDreRY7GgCfQyUtYm5EG8ahO5Y+T76hR9Bq
-nhIAmQHDAE9OnTzDwg6hbZcKs3XC7dqv
-=V7mP
+iQEcBAEBAgAGBQJM2DpXAAoJEEqz6FtPBkyjh28H/R0b1zmsDXrKTAtnNw7cxIhS
+zUrlkjT+bspGLQ3cg58fL2E8KGzuQ1iQs8DCylNUjLm8Wi+csYmtvKujcHqrHggx
+BBcuH1PQjuKZfTmyZZVONNZFdEfi6kaR1MB2vh1xV1+gtdbmv9pN4YxuzQhhfZpL
+PLJZnYJm/2QbrlpEA5qvCbyb9lJKkc787mkg3CUGZjRKcTdjMIY2Ygz2Onr/clvE
+cIDPT1PUOJCySrQOFYRPSA0y0oCwgdOT6W0jw+DH8x4D31G8ufUnPzT2YtEovILU
+KuJtGTEsWbq1i+N5JqvrZz5Iq7iCAEVkC8PydJkebpBMLY3PjO2gEVLA3KYtRL8=
+=DqOh
 -----END PGP SIGNATURE-----
