@@ -1,6 +1,11 @@
 # ChangeLog for app-misc/when
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/when/ChangeLog,v 1.38 2010/10/04 06:54:09 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/when/ChangeLog,v 1.39 2010/11/08 17:58:37 radhermit Exp $
+
+*when-1.1.22 (08 Nov 2010)
+
+  08 Nov 2010; Tim Harder <radhermit@gentoo.org> +when-1.1.22.ebuild:
+  Version bump. Don't inherit unused eclasses.
 
 *when-1.1.21 (04 Oct 2010)
 
